--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@agm/core": "1.0.0-beta.2",
     "@angular/animations": "5.2.9",
     "@angular/cdk": "5.2.4",
+    "@angular/cli": "^7.0.4",
     "@angular/common": "5.2.9",
     "@angular/compiler": "5.2.9",
     "@angular/core": "5.2.9",
@@ -30,6 +31,7 @@
     "@angular/platform-server": "5.2.9",
     "@angular/router": "5.2.9",
     "ajv": "6.4.0",
+    "angular-materializecss-datepicker": "^0.1.2",
     "arrive": "2.4.1",
     "bootstrap": "4.1.0",
     "bootstrap-material-design": "4.1.1",
